derive/tests/behavior/03-wrong-usage.stderr
error[E0433]: failed to resolve: could not find `Behavior` in `behaviortree_derive`
 --> tests/behavior/03-wrong-usage.rs:8:31
  |
8 | #[derive(behaviortree_derive::Behavior)]
  |                               ^^^^^^^^ could not find `Behavior` in `behaviortree_derive`
